--- a/Samples/app/src/main/res/layout/activity_main.xml
+++ b/Samples/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:layout_height="match_parent">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="@string/greeting"
+        android:textSize="34sp"
+        android:textColor="@color/colorGreeting"
+        android:layout_gravity="center_horizontal"
+        android:gravity="center_horizontal"/>
+    
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:background="@color/colorEditTextBG"
+        android:hint="@string/editTextHint"
+        android:id="@+id/edit_text_data"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="16sp"
+        android:text="@string/sendButtonText"
+        android:textAllCaps="false"
+        android:id="@+id/button_send_data"/>
+
+</LinearLayout>
