--- a/Chatter/app/src/main/res/layout/activity_receive.xml
+++ b/Chatter/app/src/main/res/layout/activity_receive.xml
@@ -12,12 +12,17 @@
         android:text="@string/view_title_text"
         android:layout_gravity="center_horizontal"
         android:textSize="24sp"/>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:background="@color/color_text_view_bg"
-        android:textColor="@color/color_text_view_text"
-        android:id="@+id/text_view_chatter"/>
+    <ScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:background="@color/color_text_view_bg"
+            android:textColor="@color/color_text_view_text"
+            android:id="@+id/text_view_chatter"/>
+    </ScrollView>
+
 
 </LinearLayout>
