--- a/Chatter/app/src/main/res/layout/activity_receive.xml
+++ b/Chatter/app/src/main/res/layout/activity_receive.xml
@@ -14,7 +14,8 @@
         android:textSize="24sp"/>
     <ScrollView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="0dp"
+        android:layout_weight="1">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -23,6 +24,10 @@
             android:textColor="@color/color_text_view_text"
             android:id="@+id/text_view_chatter"/>
     </ScrollView>
-
+    <!--<Button-->
+        <!--android:layout_width="250dp"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="Button"-->
+        <!--android:layout_gravity="center_horizontal"/>-->
 
 </LinearLayout>
