--- a/Chatter/app/src/main/res/menu/main_menu.xml
+++ b/Chatter/app/src/main/res/menu/main_menu.xml
@@ -6,5 +6,6 @@
         android:title="View Text View"/>
     <item android:id="@+id/menu_item_view_system_list"
         android:title="View System List"/>
-
+    <item android:id="@+id/menu_item_view_custom_list"
+        android:title="View Custom List"/>
 </menu>
