--- a/Chatter/app/src/main/res/values/colors.xml
+++ b/Chatter/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="color_view_bg">#A1E2E2</color>
     <color name="color_text_view_bg">#cececece</color>
     <color name="color_text_view_text">#009999</color>
+    <color name="color_divider">#ffff00</color>
 </resources>
