--- a/Chatter/app/src/main/res/layout/activity_main.xml
+++ b/Chatter/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,8 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/color_send_bg">
+    android:background="@color/color_send_bg"
+    android:id="@+id/linear_layout_main">
 
     <TextView
         android:layout_width="wrap_content"
