--- a/Chatter/app/src/main/res/xml/preferences.xml
+++ b/Chatter/app/src/main/res/xml/preferences.xml
@@ -8,8 +8,10 @@
         android:key="preference_user_password"
         android:title="@string/preference_user_password_title"
         android:summary="@string/preference_user_password_summary"></EditTextPreference>
-    <EditTextPreference
+    <ListPreference
         android:key="preference_main_bg_color"
+        android:entries="@array/color_names"
+        android:entryValues="@array/color_values"
         android:title="@string/preference_main_bg_color_title"
-        android:summary="@string/preference_main_bg_color_summary"></EditTextPreference>
+        android:summary="@string/preference_main_bg_color_summary"></ListPreference>
 </PreferenceScreen>
