--- a/Chatter/app/src/main/res/xml/preferences.xml
+++ b/Chatter/app/src/main/res/xml/preferences.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
     <EditTextPreference
-        android:key="preference_user_name"
+        android:key="@string/preference_key_user_name"
         android:title="@string/preference_user_name_title"
         android:summary="@string/preference_user_name_summary"></EditTextPreference>
     <EditTextPreference
-        android:key="preference_user_password"
+        android:key="@string/preference_key_password"
         android:title="@string/preference_user_password_title"
         android:summary="@string/preference_user_password_summary"></EditTextPreference>
     <ListPreference
-        android:key="preference_main_bg_color"
+        android:key="@string/preference_key_main_bg_color"
         android:entries="@array/color_names"
         android:entryValues="@array/color_values"
         android:title="@string/preference_main_bg_color_title"
