--- a/Chatter/app/src/main/res/menu/main_menu.xml
+++ b/Chatter/app/src/main/res/menu/main_menu.xml
@@ -8,6 +8,8 @@
         android:title="View System List"/>
     <item android:id="@+id/menu_item_view_custom_list"
         android:title="View Custom List"/>
+    <item android:id="@+id/menu_item_layout_options"
+        android:title="Layout Options" />
     <item android:id="@+id/menu_item_preferences"
         android:title="Preferences" />
 </menu>
