--- a/Chatter/app/src/main/res/menu/main_menu.xml
+++ b/Chatter/app/src/main/res/menu/main_menu.xml
@@ -10,6 +10,8 @@
         android:title="View Custom List"/>
     <item android:id="@+id/menu_item_layout_options"
         android:title="Layout Options" />
+    <item android:id="@+id/menu_item_color_spinner"
+        android:title="Change Background Color" />
     <item android:id="@+id/menu_item_preferences"
         android:title="Preferences" />
 </menu>
