--- a/AndroidLab01/app/src/main/res/values/colors.xml
+++ b/AndroidLab01/app/src/main/res/values/colors.xml
@@ -4,4 +4,7 @@
     <color name="title_text_color">#000000</color>
     <color name="radio_group_color">#000000</color>
     <color name="title_text_bg">#DEDEDE</color>
+    <color name="name_color">#999</color>
+    <color name="background_placeholder">#eeecd5</color>
+    <color name="divider_color">#000000</color>
 </resources>
