--- a/Week06/app/src/main/res/menu/main_menu.xml
+++ b/Week06/app/src/main/res/menu/main_menu.xml
@@ -4,6 +4,9 @@
         android:id="@+id/menu_item_home"
         android:title="@string/menu_item_home" />
     <item
+        android:id="@+id/menu_item_fragment_activity"
+        android:title="Fragment Activity" />
+    <item
         android:id="@+id/menu_item_display_chatter"
         android:title="@string/menu_item_display_chatter" />
     <item
